; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_intel_ips.c_ips_gpu_raise.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_intel_ips.c_ips_gpu_raise.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ips_driver = type { i32, i32 (...)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ips_driver*)* @ips_gpu_raise to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ips_gpu_raise(%struct.ips_driver* %0) #0 {
  %2 = alloca %struct.ips_driver*, align 8
  store %struct.ips_driver* %0, %struct.ips_driver** %2, align 8
  %3 = load %struct.ips_driver*, %struct.ips_driver** %2, align 8
  %4 = call i32 @ips_gpu_turbo_enabled(%struct.ips_driver* %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %17

7:                                                ; preds = %1
  %8 = load %struct.ips_driver*, %struct.ips_driver** %2, align 8
  %9 = getelementptr inbounds %struct.ips_driver, %struct.ips_driver* %8, i32 0, i32 1
  %10 = load i32 (...)*, i32 (...)** %9, align 8
  %11 = call i32 (...) %10()
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %7
  %14 = load %struct.ips_driver*, %struct.ips_driver** %2, align 8
  %15 = getelementptr inbounds %struct.ips_driver, %struct.ips_driver* %14, i32 0, i32 0
  store i32 0, i32* %15, align 8
  br label %16

16:                                               ; preds = %13, %7
  br label %17

17:                                               ; preds = %16, %6
  ret void
}

declare dso_local i32 @ips_gpu_turbo_enabled(%struct.ips_driver*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
